add jskos 2 search and resources endpoints